Add Map and some basic tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,4 @@ add_test(ListTest test/list_test)
 add_test(DecoratorTest test/decorator_test)
 add_test(PointTest test/point_test)
 add_test(SkipListTest test/skiplist_test)
+add_test(MapTest test/map_test)
