--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,6 @@ target_link_libraries(point_test ${Boost_LIBRARIES})
 
 add_executable(skiplist_test skiplist_test.cpp)
 target_link_libraries(skiplist_test ${Boost_LIBRARIES})
+
+add_executable(map_test map_test.cpp)
+target_link_libraries(map_test ${Boost_LIBRARIES})
