--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ enable_cxx_compiler_flag_if_supported("-Wall")
 enable_cxx_compiler_flag_if_supported("-Wextra")
 enable_cxx_compiler_flag_if_supported("-Werror")
 enable_cxx_compiler_flag_if_supported("-pedantic")
-enable_cxx_compiler_flag_if_supported("-O2")
+# enable_cxx_compiler_flag_if_supported("-O2")
 enable_cxx_compiler_flag_if_supported("-g")
 enable_cxx_compiler_flag_if_supported("-Wno-gnu-statement-expression")
 # enable_cxx_compiler_flag_if_supported("-Wlogical-op")
@@ -56,3 +56,4 @@ add_test(DecoratorTest test/decorator_test)
 add_test(PointTest test/point_test)
 add_test(SkipListTest test/skiplist_test)
 add_test(MapTest test/map_test)
+add_test(VectorTest test/vector_test)
