Ditch boost unittest in favor of googletest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,12 +35,11 @@ enable_cxx_compiler_flag_if_supported("-Wall")
 enable_cxx_compiler_flag_if_supported("-Wextra")
 enable_cxx_compiler_flag_if_supported("-Werror")
 enable_cxx_compiler_flag_if_supported("-pedantic")
-# enable_cxx_compiler_flag_if_supported("-O2")
 enable_cxx_compiler_flag_if_supported("-g")
 enable_cxx_compiler_flag_if_supported("-Wno-gnu-statement-expression")
 # enable_cxx_compiler_flag_if_supported("-Wlogical-op")
 # enable_cxx_compiler_flag_if_supported("-Wstrict-null-sentinel")
-# enable_cxx_compiler_flag_if_supported("-Wnoexcept")
+enable_cxx_compiler_flag_if_supported("-Wnoexcept")
 set(CXXFLAGS "-Winline -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wmissing-declarations -Wmissing-include-dirs -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror")
 separate_arguments(CXXFLAGS)
 list(LENGTH CXXFLAGS len)
