--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,26 +1,33 @@
+find_package(GTest REQUIRED)
 find_package(Boost REQUIRED COMPONENTS unit_test_framework)
-include_directories(${Boost_INCLUDE_DIR})
 
 add_executable(list_test list_test.cpp)
-target_link_libraries(list_test ${Boost_LIBRARIES})
+target_link_libraries(list_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(list_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(decorator_test decorator_test.cpp)
-target_link_libraries(decorator_test ${Boost_LIBRARIES})
+target_link_libraries(decorator_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(decorator_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(point_test point_test.cpp)
-target_link_libraries(point_test ${Boost_LIBRARIES})
+target_link_libraries(point_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(point_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(skiplist_test skiplist_test.cpp)
-target_link_libraries(skiplist_test ${Boost_LIBRARIES})
+target_link_libraries(skiplist_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(skiplist_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(map_test map_test.cpp)
-target_link_libraries(map_test ${Boost_LIBRARIES})
+target_link_libraries(map_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(map_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(vector_test vector_test.cpp)
-target_link_libraries(vector_test ${Boost_LIBRARIES})
+target_link_libraries(vector_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(vector_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 add_executable(algorithm_test algorithm_test.cpp)
-target_link_libraries(algorithm_test ${Boost_LIBRARIES})
+target_link_libraries(algorithm_test PUBLIC GTest::GTest GTest::Main)
+target_include_directories(algorithm_test PUBLIC ${GTEST_INCLUDE_DIRS})
 
 find_program(
   CLANG_TIDY_EXE
