--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,16 +14,10 @@ register_test(map_test map_test.cpp)
 register_test(vector_test vector_test.cpp)
 register_test(algorithm_test algorithm_test.cpp)
 
-find_program(
-  CLANG_TIDY_EXE
-  NAMES "clang-tidy"
-  DOC "Path to clang-tidy executable"
-  )
 if(NOT CLANG_TIDY_EXE)
   message(STATUS "clang-tidy not found.")
 else()
   message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
-  set(DO_CLANG_TIDY "${CLANG_TIDY_EXE}")
   set_target_properties(
       map_test
       list_test
@@ -33,6 +27,6 @@ else()
       vector_test
       algorithm_test
     PROPERTIES
-      CXX_CLANG_TIDY "${DO_CLANG_TIDY}"
+    CXX_CLANG_TIDY "${CLANG_TIDY_EXE}"
   )
 endif()
