--- a/bench/BUILD
+++ b/bench/BUILD
@@ -4,6 +4,10 @@ cc_test(
     deps = [
         "//:skiplist",
         "@com_github_google_benchmark//:benchmark_main",
+        "@boost//:assert",
+        "@boost//:pool",
+        "@boost//:throw_exception",
+        "@boost//:type_traits",
     ],
     tags = ["benchmark"],
 )
