--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,10 @@ jobs:
     - name: Mount bazel cache
       uses: actions/cache@v1
       with:
-        path: "/home/runner/.cache/bazel"
+        path: |
+          /home/runner/.cache/bazel
+          !/home/runner/.cache/bazel/*/cache/repos
+          !/home/runner/.cache/bazel/*/install
         key: bazel
 
     - name: Install bazelisk
